@@ -217,21 +217,21 @@ void CMainFrame::OnFilePrint()
 	GetDIBits(MemDC, hbmView, 0, Height, pBits, (BITMAPINFO*)&bi, DIB_RGB_COLORS);
 
 	// Determine the scaling factors required to print the bitmap and retain its original proportions.
-    float fLogPelsX1 = (float) GetDeviceCaps(ViewDC, LOGPIXELSX);
-    float fLogPelsY1 = (float) GetDeviceCaps(ViewDC, LOGPIXELSY);
-	float fLogPelsX2 = (float) GetDeviceCaps(pd.hDC, LOGPIXELSX);
-    float fLogPelsY2 = (float) GetDeviceCaps(pd.hDC, LOGPIXELSY);
-	float fScaleX = max(fLogPelsX1, fLogPelsX2) / min(fLogPelsX1, fLogPelsX2);
-	float fScaleY = max(fLogPelsY1, fLogPelsY2) / min(fLogPelsY1, fLogPelsY2);
+  float fLogPelsX1 = (float) GetDeviceCaps(ViewDC, LOGPIXELSX);
+  float fLogPelsY1 = (float) GetDeviceCaps(ViewDC, LOGPIXELSY);
+  float fLogPelsX2 = (float) GetDeviceCaps(pd.hDC, LOGPIXELSX);
+  float fLogPelsY2 = (float) GetDeviceCaps(pd.hDC, LOGPIXELSY);
+	float fScaleX = MAX(fLogPelsX1, fLogPelsX2) / min(fLogPelsX1, fLogPelsX2);
+	float fScaleY = MAX(fLogPelsY1, fLogPelsY2) / min(fLogPelsY1, fLogPelsY2);
 
-    // Compute the coordinates of the upper left corner of the centered bitmap.
+  // Compute the coordinates of the upper left corner of the centered bitmap.
 	int cWidthPels = GetDeviceCaps(pd.hDC, HORZRES);
-    int xLeft = ((cWidthPels / 2) - ((int) (((float) Width) * fScaleX)) / 2);
-    int cHeightPels = GetDeviceCaps(pd.hDC, VERTRES);
-    int yTop = ((cHeightPels / 2) - ((int) (((float) Height) * fScaleY)) / 2);
+  int xLeft = ((cWidthPels / 2) - ((int) (((float) Width) * fScaleX)) / 2);
+  int cHeightPels = GetDeviceCaps(pd.hDC, VERTRES);
+  int yTop = ((cHeightPels / 2) - ((int) (((float) Height) * fScaleY)) / 2);
 
-    // Use StretchDIBits to scale the bitmap and maintain its original proportions
-    if (GDI_ERROR == StretchDIBits(pd.hDC, xLeft, yTop, (int) ((float) Width * fScaleX),
+  // Use StretchDIBits to scale the bitmap and maintain its original proportions
+  if (GDI_ERROR == StretchDIBits(pd.hDC, xLeft, yTop, (int) ((float) Width * fScaleX),
 		(int) ((float) Height * fScaleY), 0, 0, Width, Height, pBits, (BITMAPINFO*)&bi, DIB_RGB_COLORS, SRCCOPY))
 	{
 		throw CWinException(_T("Failed to resize image for printing"));
